Broke main nav trying to solve the issue where on desktop, the nav has no relation to the logo (by moving the nav markup into the pusher div on mobile)

--- a/source/css/partials/_nav.scss
+++ b/source/css/partials/_nav.scss
@@ -2,6 +2,10 @@
  * Main Navigation container
  */
 #main-nav {
+  display: none;
+}
+
+#mobile-nav {
   box-shadow: rem(-5) 0 rem(10) 0 rgba(0, 0, 0, .1);
   position: absolute;
   top: 0;
@@ -82,42 +86,6 @@
 
 @include media($bp-above-tablet) {
   #main-nav {
-    position: static;
-    top: auto;
-    right: auto;
-    height: auto;
-    width: auto;
-    box-shadow: none;
-
-    @include transform(none);
-    @include transition(none);
-
-    .search-form {
-      float: right;
-      border: 1px solid $select-border;
-      border-top: 0;
-      width: rem(280);
-    }
-
-    ul {
-      @include clearfix;
-
-      li {
-        float: left;
-        border-bottom: 0;
-      }
-
-      a {
-        color: $text-color;
-        font-size: rem(18);
-
-        &:active,
-        &:hover {
-          text-decoration: underline;
-          background: $white;
-          color: $text-color;
-        }
-      }
-    }
+    display: block;
   }
 }
